_archive/content-services/5.0/concepts/prereq-opt-install.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: [Installation, Administration, Extensions/Third Party Tools]
keyword: [tools, software]
---

# Installing additional software for Alfresco

The third-party software used by Alfresco is installed when you use the setup wizards to install Alfresco. If you wish to install the third-party software independently, this section describes the steps for obtaining and installing the software. Some of the software can be installed any time before or after installing Alfresco.

-   **[Installing LibreOffice](../tasks/lo-install.md)**  
In Alfresco, you can transform a document from one format to another, for example, a text file to a PDF file. To have access to these transformation facilities in Alfresco, you must install LibreOffice. This is optional, and can be done any time after Alfresco is installed.
-   **[Installing ImageMagick](../tasks/imagemagick-config.md)**  
To enable image manipulation in Alfresco, you must install and configure ImageMagick. Alfresco uses ImageMagick to manipulate images for previewing.
-   **[Installing Ghostscript](../tasks/Ghostscript-install.md)**  
Alfresco Share uses Ghostscript version 8.64 for creating document thumbnails and previews. This topic describes how to install Ghostscript on your system.
-   **[Installing TinyMCE language packs](../tasks/tiny-lang.md)**  
Translations in Alfresco use the language packs supplied in the default install. The supported language packs are: German \(de\), English \(en\), Spanish \(es\), French \(fr\), Italian \(it\), Japanese \(ja\), and Dutch \(nl\). The language used switches according to the browser locale. Ensure that your browser is set up to view the relevant locale, which ensures that the special characters display correctly in your installed instance.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

