_archive/content-services/5.2/concepts/prereq-opt-install.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
---

# Installing additional software for Alfresco Content Services

The third-party software used by Alfresco Content Services is installed when you use the setup wizards to install Alfresco Content Services. If you wish to install the third-party software independently, this information describes the steps for obtaining and installing the software. Some of the software can be installed any time before or after installing Alfresco Content Services.

-   **[Installing LibreOffice](../tasks/lo-install.md)**  
In Alfresco Content Services, you can transform a document from one format to another, for example, a text file to a PDF file. To have access to these transformation facilities, you must install LibreOffice. This is optional, and can be done any time after Alfresco Content Services is installed.
-   **[Installing ImageMagick](../tasks/imagemagick-config.md)**  
To enable image manipulation in Alfresco Content Services, you must install and configure ImageMagick. Alfresco Content Services uses ImageMagick to manipulate images for previewing.
-   **[Installing alfresco-pdf-renderer](../tasks/pdf-renderer-install.md)**  
Alfresco Content Services uses alfresco-pdf-renderer for creating document thumbnails and previews. Use this information to install alfresco-pdf-renderer on your system.
-   **[Installing TinyMCE language packs](../tasks/tiny-lang.md)**  
Translations in Alfresco Content Services use the language packs supplied in the default install. The supported language packs are: German \(de\), English \(en\), Spanish \(es\), French \(fr\), Italian \(it\), Japanese \(ja\), and Dutch \(nl\). The language used switches according to the browser locale. Ensure that your browser is set up to view the relevant locale, which ensures that the special characters display correctly in your installed instance.

**Parent topic:**[Installing manually](../concepts/ch-install.md)

